# Poisson-Surface-Reconstruction-GPU

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  glad.c  main.cpp
PointCloudData/data_pcd_without_normal/: Armadillo.pcd  bunny.pcd  horse.pcd
PointCloudData/data_ply_normal/bunny/: bunny.ply
PointCloudData/data_txt/: Block.txt  Cactus.txt  Dino.txt  Elephant.txt  Horse.txt  bunny.txt  gargo50K.txt  hippo.txt
base/: CommonTypes.h  CommonUtils.cu  CommonUtils.h  Constants.cpp  Constants.h  GlobalConfigs.h  Logging.h  ThreadPool.h
base/DeviceAPI/: convenience.cuh  device_array.hpp  device_array_impl.hpp  device_intrinsics.h  device_memory.cpp  device_memory.hpp  device_memory_impl.hpp  kernel_containers.hpp  safe_call.hpp
base/DeviceReadWrite/: DeviceArrayHandle.h  DeviceArrayView.h  DeviceBufferArray.h  SynchronizeArray.h
core/: AlgorithmTypes.cu  AlgorithmTypes.cuh  AlgorithmTypes.h
math/: Factor.cpp  Factor.h  PPolynomial.h  Polynomial.h  SparseMatrix.cpp  SparseMatrix.h  Vector.cu  Vector.h  VectorUtils.h
mesh/: BinaryNode.h  BuildMeshGeometry.cpp  BuildMeshGeometry.cu  BuildMeshGeometry.h  BuildOctree.cpp  BuildOctree.cu  BuildOctree.h  ComfirmedVector.h  ComputeNodesDivergence.cpp  ComputeNodesDivergence.cu  ComputeNodesDivergence.h  ComputeTriangleIndices.cpp  ComputeTriangleIndices.cu  ComputeTriangleIndices.h  ComputeVectorField.cpp  ComputeVectorField.cu  ComputeVectorField.h  ConfirmedPPolynomial.h  ConfirmedSparseMatrix.h  DebugTest.cpp  DebugTest.h  DrawMesh.cpp  DrawMesh.cu  DrawMesh.h  FunctionData.h  Geometry.cu  Geometry.h  OctNode.cuh  PoissonReconstruction.cpp  PoissonReconstruction.cu  PoissonReconstruction.h
mesh/solver/: CGAlgorithm.cu  CGAlgorithm.cuh  LaplacianSolver.cpp  LaplacianSolver.cu  LaplacianSolver.h
render/: GLShaderProgram.cpp  GLShaderProgram.h
render/shaders/: CoordinateSystemShader.frag  CoordinateSystemShader.vert  MeshShader.frag  MeshShader.vert
